--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -4,19 +4,33 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
+  top: $safeTop;
   left: 0;
   right: 0;
   z-index: 999;
   background: #FFFFFF;
   color: $colorHeading;
   border-bottom: 1px solid $colorLine;
+  &:before{
+    content: '';
+    height: $safeTop;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 99999;
+    background: #FFF;
+  }
   &.no-border{
     border: 0;
     box-shadow: none;
   }
   &.transparent{
     background: transparent;
+    &:before{
+      background: $bodyBackground;
+    }
   }
   .left,
   .right{
@@ -79,6 +93,27 @@
   &.bg-dark{
     border: 0;
   }
+  &.bg-primary:before{
+    background: $colorPrimary !important;
+  }
+  &.bg-secondary:before{
+    background: $colorSecondary !important;
+  }
+  &.bg-success:before{
+    background: $colorSuccess !important;
+  }
+  &.bg-warning:before{
+    background: $colorWarning !important;
+  }
+  &.bg-danger:before{
+    background: $colorDanger !important;
+  }
+  &.bg-info:before{
+    background: $colorInfo !important;
+  }
+  &.bg-dark:before{
+    background: #222 !important;
+  }
 }
 
 
@@ -91,8 +126,17 @@
   width: 100%;
   padding: 5px 16px;
   display: flex;
+  margin-top: $safeTop;
   align-items: center;
   background: #FFF;
   z-index: 1000;
   border-bottom: 1px solid $colorLine;
+}
+
+.testPreview{
+  .appHeader{
+    position: relative;
+    top: 0;
+    z-index: 0;
+  }
 }
