--- a/styles/ui/_tabs.scss
+++ b/styles/ui/_tabs.scss
@@ -1,7 +1,7 @@
 .nav-tabs {
   width: 100%;
 }
-.nav-tabs.style1 {
+.nav-tabs.capsuled {
   border: 0;
   background: rgba($colorLine, 0.4);
   border-radius: $borderRadius;
