--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,15 +3,14 @@
 ////////////////////////////////////////////////////
 
 // Body Background
-// $bodyBackground : #EDEDF5;
-$bodyBackground : #eaeaf3;
+$bodyBackground : #EDEDF5;
 
 // Primary Colors
 $colorPrimary : #3265af;
 $colorSecondary : #8494A8;
 $colorSuccess: #1DCC70;
 $colorDanger : #FF396F;
-$colorWarning : #946a07;
+$colorWarning : #FFB400;
 $colorInfo : #05D0A4;
 
 // Line Colors
@@ -28,6 +27,18 @@ $borderRadius: 10px;
 // Safearea
 $safeBottom : env(safe-area-inset-bottom);
 $safeTop : env(safe-area-inset-top);
+
+
+////////////////////////////////////////////////////
+// Dark Mode Colors
+////////////////////////////////////////////////////
+$darkmode_bodyBackground: #030108;
+$darkmode_contentBackground: #161129;
+$darkmode_colorHeading: #fff;
+$darkmode_colorText: #8f82a5;
+$darkmode_colorLight: #69587f;
+$darkmode_colorLine: #2d1f3b;
+
 
 ////////////////////////////////////////////////////
 // Font Sizes
