--- a/styles/ui/_card.scss
+++ b/styles/ui/_card.scss
@@ -32,8 +32,16 @@
     background: transparent;
     color: $colorHeading;
     font-weight: $medium;
+    font-size: $fontSizeHeading;
     padding: 12px 16px;
     border-bottom: 1px solid $colorLine;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .button{
+      font-size: 24px;
+      color: $colorLight;
+    }
   }
   .card-footer {
     background: transparent;
