--- a/styles/ui/_carousel.scss
+++ b/styles/ui/_carousel.scss
@@ -1,38 +1,72 @@
-.owl-carousel .owl-stage-outer{
-    padding-bottom: 20px; 
-    margin-bottom: -20px;
-}
-.carousel-slider{
-    text-align: center;
-    .owl-dots{
-        position: fixed;
-        left: 0;
-        right: 0;
-        bottom: 80px;
+.splide {
+    margin-bottom: -20px !important;
+    &:active{
+        cursor: grab;
+    }
+    .splide__list {
+        padding-bottom: 20px !important;
     }
 }
-.carousel-button-footer{
-    padding: 0 16px;
-    padding-bottom: env(safe-area-inset-bottom);
-    width: 100%;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    min-height: 84px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #FFF;
-    right: 0;
-    > div{
-        flex: 1;
+.carousel-single {
+    .splide__slide {
+        margin-left: -16px !important;
+        padding-right: 16px !important;
     }
 }
 .carousel-multiple{
-    width: calc(100% + 16px);
-    margin-left: -16px;
+    .splide__slide {
+        margin-left: -8px !important;
+        padding-right: 8px !important;
+    }
 }
-.carousel-single{
-    width: calc(100% + 16px);
-    margin-left: -16px;
+.carousel-small {
+    .splide__slide {
+        margin-left: -8px !important;
+        padding-right: 0px !important;
+        &:first-child{
+            margin-left: 24px !important;
+        }
+    }
+}
+.carousel-slider {
+    text-align: center;
+    .splide__list {
+        padding-bottom: 100px !important;
+    }
+    .imaged.w-100 {
+        max-width: 400px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .splide__pagination {
+        position: fixed;
+        width: 100%;
+        bottom: 120px;
+        button {
+            background: $colorLine;
+            margin: 0 5px !important;
+            &.is-active {
+                background: $colorLight;
+                transform: scale(1);
+            }
+        }
+    }
+}
+.carousel-button-footer {
+    min-height: 84px;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: $safeBottom;
+    width: 100%;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 990;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    > div {
+        width: 100%;
+    }
 }
