--- a/styles/ui/_checkbox-radio-toggle.scss
+++ b/styles/ui/_checkbox-radio-toggle.scss
@@ -1,61 +1,68 @@
-.custom-control {
-  .custom-control-label {
-    padding-left: 10px;
-    padding-top: 2px;
+.form-check {
+  padding: 0;
+  margin: 0;
+  min-height: auto;
+  height: auto;
+  .form-check-input {
+    display: none;
+  }
+  .form-check-label {
+    cursor: pointer;
+    position: relative;
+    min-height: 20px;
+    padding: 0 0 0 32px;
+    line-height: 1.7em;
     color: $colorHeading;
-    &:before {
-      box-shadow: none !important;
-      background: $colorLine;
+    &:after {
+      position: absolute;
+      left: 0;
+      top: 2px;
+      content: "";
+      display: block;
       width: 22px;
       height: 22px;
-      border-color: $colorLine;
-      border-radius: 100%;
-      margin-top: -2px;
       background: transparent;
-      border-color: $colorLine !important;
+      border-radius: 100px;
+      border: 1px solid $colorLine;
     }
-    &:after {
-      margin-top: 1px;
-      margin-left: 3px;
-    }
-    &:active {
-      &:before {
-        background: #fff !important;
-        border-color: $colorLine !important;
-      }
-    }
-  }
-  .custom-control-input:checked ~ .custom-control-label {
     &:before {
-      background: $colorPrimary !important;
-      border-color: $colorPrimary !important;
-    }
-    &:after {
-      width: 16px;
-      height: 16px;
-      background-size: 12px 12px;
+      content: "";
+      display: block;
+      width: 22px;
+      height: 22px;
+      position: absolute;
+      left: 0;
+      top: 2px;
+      z-index: 3;
+      opacity: 0;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
     }
   }
 }
-.custom-control .custom-control-input:checked ~ .custom-control-label:before {
-  border-radius: 100%;
+.form-check-input[type="radio"] ~ .form-check-label:before {
+  background-image: url("data:image/svg+xml,%0A%3Csvg width='8px' height='8px' viewBox='0 0 8 8' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Ccircle id='Oval' fill='%23FFFFFF' cx='4' cy='4' r='4'%3E%3C/circle%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center center;
 }
-.custom-radio {
-  .custom-control-label {
-    &:before {
-      border-radius: 100%;
-    }
+.form-check-input:checked ~ .form-check-label {
+  &:after {
+    background-color: $colorPrimary;
+    border-color: $colorPrimary !important;
   }
-  .custom-control-input:checked ~ .custom-control-label {
-    &:before {
-      border-radius: 100%;
-    }
+  &:before {
+    opacity: 1;
+  }
+}
+.form-check-inline {
+  margin-right: 0;
+  .form-check-label {
+    margin-bottom: -3px;
+    padding-left: 24px;
   }
 }
 
 .input-list {
-  .custom-control {
-    padding: 0;
+  .form-check {
     &:after {
       content: "";
       height: 1px;
@@ -63,77 +70,58 @@
       display: block;
       margin-left: 54px;
     }
-  }
-  .custom-control-label {
-    width: 100%;
-    padding: 10px 20px 10px 54px;
-    min-height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    transition: 0.3s all;
-    &:active {
-      background: rgba($colorLine, 0.3);
+    .form-check-label {
+      min-height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      transition: 0.1s all;
+      padding: 6px 16px 6px 54px;
+      &:before,
+      &:after {
+        left: 16px;
+        top: 14px;
+      }
+      &:active {
+        background: rgba($colorLine, 0.3);
+      }
     }
-    &:before,
-    &:after {
-      top: 50%;
-      left: 16px;
-      transform: translate(0%, -50%);
-      margin: 0;
-    }
-    &:after {
-      width: 22px;
-      height: 22px;
-      margin: 0px 0 0 3px;
-    }
-  }
-  .custom-control:last-child {
-    &:after {
-      display: none;
+    &:last-child {
+      &:after {
+        height: 0;
+      }
     }
   }
 }
-.custom-switch {
-  .custom-control-label {
+.form-switch {
+  height: 30px;
+  .form-check-label {
     width: 56px;
     height: 30px;
-    &:before {
-      margin: 0;
-      left: 0;
-      top: 0;
-      border-radius: 100px;
-      width: 56px;
-      height: 30px;
-      border-color: darken($colorLine, 5%) !important;
-      background: $colorLine;
-    }
+    padding: 0;
+    margin: 0;
     &:after {
+      height: 30px;
+      width: 56px;
+      background: $colorLine;
+      border: 1px solid darken($colorLine, 5%);
+      transition: .1s linear;
+    }
+    &:before {
+      opacity: 1;
+      border-radius: 100px;
       width: 24px;
       height: 24px;
-      border-radius: 100px;
-      margin-top: -1px;
-      margin-left: 1px;
-      left: 3px;
-      top: 4px;
-      background: #fff;
-      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15), 0 2px 1px 0 rgba(0, 0, 0, 0.05);
-    }
-    &:active{
-        &:before{
-            background: rgba($colorLine, 0.5) !important;
-        };
+      top: 5px;
+      left: 4px;
+      background: #ffffff;
+      box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1), 0 1px 3px 0 rgba(0, 0, 0, 0.08);
+      transition: .15s ease-in-out;
     }
   }
-  .custom-control-input:checked ~ .custom-control-label {
+  .form-check-input:checked ~ .form-check-label {
     &:before {
-      border-radius: 100px;
-    }
-    &:after {
-      width: 24px;
-      height: 24px;
-      border-radius: 100px;
-      left: 16px;
+      left: 28px;
     }
   }
 }
