--- a/styles/ui/_chips.scss
+++ b/styles/ui/_chips.scss
@@ -13,7 +13,7 @@
     padding: 0 12px;
   }
   &.chip-outline {
-    background: transparent;
+    background: transparent !important;
     box-shadow: inset 0 0 0 1px $colorLine;
   }
   &.chip-media {
@@ -61,79 +61,79 @@
   }
 }
 .chip-primary {
-  background: $colorPrimary;
+  background: $colorPrimary !important;
   color: #fff;
   .chip-delete {
     color: #fff;
   }
   &.chip-outline {
-    color: $colorPrimary;
-    box-shadow: inset 0 0 0 1px $colorPrimary;
+    color: $colorPrimary !important;
+    box-shadow: inset 0 0 0 1px $colorPrimary !important;
   }
 }
 .chip-danger {
-  background: $colorDanger;
+  background: $colorDanger !important;
   color: #fff;
   .chip-delete {
     color: #fff;
   }
   &.chip-outline {
-    color: $colorDanger;
-    box-shadow: inset 0 0 0 1px $colorDanger;
+    color: $colorDanger !important;
+    box-shadow: inset 0 0 0 1px $colorDanger !important;
   }
 }
 .chip-success {
-  background: $colorSuccess;
+  background: $colorSuccess !important;
   color: #fff;
   .chip-delete {
     color: #fff;
   }
   &.chip-outline {
-    color: $colorSuccess;
-    box-shadow: inset 0 0 0 1px $colorSuccess;
+    color: $colorSuccess !important;
+    box-shadow: inset 0 0 0 1px $colorSuccess !important;
   }
 }
 .chip-warning {
-  background: $colorWarning;
+  background: $colorWarning !important;
   color: #fff;
   .chip-delete {
     color: #fff;
   }
   &.chip-outline {
-    color: $colorWarning;
-    box-shadow: inset 0 0 0 1px $colorWarning;
+    color: $colorWarning !important;
+    box-shadow: inset 0 0 0 1px $colorWarning !important;
   }
 }
 .chip-info {
-  background: $colorInfo;
+  background: $colorInfo !important;
   color: #fff;
   .chip-delete {
     color: #fff;
   }
   &.chip-outline {
-    color: $colorInfo;
-    box-shadow: inset 0 0 0 1px $colorInfo;
+    color: $colorInfo !important;
+    box-shadow: inset 0 0 0 1px $colorInfo !important;
   }
 }
 .chip-light {
-  background: #fff;
-  color: #222;
+  background: #fff !important;
+  color: #222 !important;
   .chip-delete {
-    color: #222;
+    color: #222 !important;
   }
   &.chip-outline {
-    color: #fff;
-    box-shadow: inset 0 0 0 1px #fff;
+    color: #fff !important;
+    box-shadow: inset 0 0 0 1px #fff !important;
   }
 }
 .chip-dark {
-  background: #222;
+  background: #222 !important;
   color: #fff;
   .chip-delete {
     color: #fff;
   }
   &.chip-outline {
-    color: #222;
-    box-shadow: inset 0 0 0 1px #222;
+    color: #222 !important;
+    box-shadow: inset 0 0 0 1px #222 !important;
   }
 }
