--- a/styles/ui/_dialog.scss
+++ b/styles/ui/_dialog.scss
@@ -12,6 +12,9 @@
     justify-content: center;
     transform: translate(0, 0) !important;
     transform: scale(0.8) !important;
+    .form-group{
+      text-align: left;
+    }
     .modal-content {
       max-width: 300px;
       margin: auto;
@@ -44,21 +47,23 @@
       .btn-inline{
         display: flex;
         margin: 0;
+        background: $colorLine;
         .btn{
           width: 100%;
           border-radius: 0;
           min-height: 58px;
           border: 0 !important;
-          border-right: 1px solid $colorLine !important;
           font-size: $fontSize;
+          margin-right: 1px;
+          background: #FFF;
           &:hover,
           &:focus,
           &:active,
           &.active {
-            background: rgba($colorLine,.3) !important;
+            background: rgba(255,255,255,.8) !important;
           }
           &:last-child{
-            border-right: 0 !important;
+            margin-right: 0;
             border-radius: 0 0 16px 0 !important;
           }
           &:first-child{
