--- a/styles/ui/_grid.scss
+++ b/styles/ui/_grid.scss
@@ -9,6 +9,9 @@
   background: rgba($colorLine, .3);
   font-size: 10px;
 }
+.iconExample{
+  color: $colorHeading;
+}
 .rounded{
   border-radius: $borderRadius !important;
 }
@@ -17,6 +20,7 @@
   margin-left: -8px;
   margin-right: -8px;
 }
+.col,
 .col-1,
 .col-2,
 .col-3,
@@ -148,47 +152,47 @@
   margin-bottom: 40px !important;
 }
 
-.ml-0 {
+.ms-0 {
   margin-left: 0 !important;
 }
-.ml-05 {
+.ms-05 {
   margin-left: 5px !important;
 }
-.ml-1 {
+.ms-1 {
   margin-left: 8px !important;
 }
-.ml-2 {
+.ms-2 {
   margin-left: 16px !important;
 }
-.ml-3 {
+.ms-3 {
   margin-left: 24px !important;
 }
-.ml-4 {
+.ms-4 {
   margin-left: 32px !important;
 }
-.ml-5 {
+.ms-5 {
   margin-left: 40px !important;
 }
 
-.mr-0 {
+.me-0 {
   margin-right: 0px !important;
 }
-.mr-05 {
+.me-05 {
   margin-right: 5px !important;
 }
-.mr-1 {
+.me-1 {
   margin-right: 8px !important;
 }
-.mr-2 {
+.me-2 {
   margin-right: 16px !important;
 }
-.mr-3 {
+.me-3 {
   margin-right: 24px !important;
 }
-.mr-4 {
+.me-4 {
   margin-right: 32px !important;
 }
-.mr-5 {
+.me-5 {
   margin-right: 40px !important;
 }
 
@@ -258,46 +262,46 @@
   padding-bottom: 40px !important;
 }
 
-.pl-0 {
+.ps-0 {
   padding-left: 0px !important;
 }
-.pl-05 {
+.ps-05 {
   padding-left: 5px !important;
 }
-.pl-1 {
+.ps-1 {
   padding-left: 8px !important;
 }
-.pl-2 {
+.ps-2 {
   padding-left: 16px !important;
 }
-.pl-3 {
+.ps-3 {
   padding-left: 24px !important;
 }
-.pl-4 {
+.ps-4 {
   padding-left: 32px !important;
 }
-.pl-5 {
+.ps-5 {
   padding-left: 40px !important;
 }
 
-.pr-0 {
+.pe-0 {
   padding-right: 0px !important;
 }
-.pr-05 {
+.pe-05 {
   padding-right: 5px !important;
 }
-.pr-1 {
+.pe-1 {
   padding-right: 8px !important;
 }
-.pr-2 {
+.pe-2 {
   padding-right: 16px !important;
 }
-.pr-3 {
+.pe-3 {
   padding-right: 24px !important;
 }
-.pr-4 {
+.pe-4 {
   padding-right: 32px !important;
 }
-.pr-5 {
+.pe-5 {
   padding-right: 40px !important;
 }
