--- a/styles/ui/_modal.scss
+++ b/styles/ui/_modal.scss
@@ -1,19 +1,28 @@
-.modal{
-  overflow: hidden;
-}
 .modalbox {
+  padding-top: $safeTop;
+  overflow: hidden;
   .modal-dialog {
     transform: translate(0, 100%) !important;
     min-width: 100%;
     margin: 0;
     transition: 0.5s all !important;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin-top: $safeTop;
     .modal-content {
       border-radius: 0;
       border: 0;
-      height: 100vh;
       margin: auto;
-      overflow: auto;
+      overflow: hidden;
       padding-top: 56px;
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      top: 0;
       .modal-header {
         border: 0;
         padding: 0;
@@ -40,7 +49,6 @@
       }
       .modal-body {
         padding: 20px 16px;
-        min-height: calc(100vh - 56px);
         overflow: auto;
       }
     }
