--- a/styles/ui/_panel.scss
+++ b/styles/ui/_panel.scss
@@ -10,6 +10,7 @@
       width: 300px;
       height: 100vh;
       overflow: auto;
+      padding-top: $safeTop;
       .modal-header {
         border-bottom: 0;
         padding: 10px 16px;
